--- a/app/views/admin/entries/edit.html.erb
+++ b/app/views/admin/entries/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @entry %> |
-<%= link_to 'Back', entries_path %>
+<%= link_to 'Show', [ 'admin', @entry ] %> |
+<%= link_to 'Back', admin_entries_path %>
