--- a/app/views/admin/entries/index.html.erb
+++ b/app/views/admin/entries/index.html.erb
@@ -13,13 +13,13 @@
   <tr>
     <td><%= entry.title %></td>
     <td><%= entry.content %></td>
-    <td><%= link_to 'Show', entry %></td>
-    <td><%= link_to 'Edit', edit_entry_path(entry) %></td>
-    <td><%= link_to 'Destroy', entry, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Show', [ 'admin', entry ]  %></td>
+    <td><%= link_to 'Edit', edit_admin_entry_path(entry) %></td>
+    <td><%= link_to 'Destroy', [ 'admin', entry ], method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Entry', new_entry_path %>
+<%= link_to 'New Entry', new_admin_entry_path %>
