--- a/app/views/admin/entries/show.html.erb
+++ b/app/views/admin/entries/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <b>Title:</b>
   <%= @entry.title %>
@@ -11,5 +9,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_entry_path(@entry) %> |
-<%= link_to 'Back', entries_path %>
+<%= link_to 'Edit', edit_admin_entry_path(@entry) %> |
+<%= link_to 'Back', admin_entries_path %>
